deprecated/portfolio/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: 'true'
    flame.pawelmalak/type: app
    flame.pawelmalak/name: portfolio
    flame.pawelmalak/url: https://portfolio.claytonc.dev
    flame.pawelmalak/icon: folder-multiple-image
spec:
  ingressClassName: traefik-external
  tls:
  - hosts:
      - portfolio.claytonc.dev
    secretName: portfolio-tls
  rules:
    - host: portfolio.claytonc.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 80
